[package]
name = "ProjectFrontend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
mongodb = "2.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
cocoon = "0.4"
dotenvy = "0.15"
regex = "1.10"
base64 = "0.22"
