[package]
name = "ProjectFrontend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json", "tls", "secrets"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }

mongodb = { version = "2.8.2", default-features = false, features = ["sync"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

base64 = "0.21"
dotenvy = "0.15"
regex = "1.11"

rand = "0.8"
aes-gcm = "0.10"



